# StreamML

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  GUIA-NUEVOS-EQUIPO.md  README.md  Run-Servers.ps1  SECURITY.md  app.py  requirements-api.txt  requirements.txt  ruff.toml  setup.ps1  setup.sh
apps/: __init__.py
apps/connector/: pyproject.toml
apps/connector/streamml_connector/: __init__.py  __main__.py  api_client.py  config.py  local_config.py  main.py  network_probe.py  obs_client.py  secrets.py  setup.css  setup_ui.py
config/: data_collection_config.json  dataset_config.json  model_input_contract_v2.json  shadow_agent_config.json  telemetry_config.json  telemetry_schema.json
deployment/: .env.example
docs/: GUIA-NUEVOS-EQUIPO.md  arquitectura-y-estructura.md  arquitectura_fase2.md  auditoria_paridad_features.md  configuracion-gui.md  decisiones-tecnicas.md  deployment.md  guia_demostracion.md  protocolo_recoleccion_fase2.md  reporte_avance_fase2.md  telemetry_design.md  validacion_shadow_mode.md
models/: artefactos_predictivo.pkl  artefactos_reactivo.pkl  model_metadata.json  model_metadata_phase1_final.json  modelo_predictivo.joblib  modelo_reactivo.joblib  modelo_reactivo_phase1_final.joblib  preprocesador_predictivo.joblib  preprocesador_predictivo_phase1_final.joblib  preprocesador_reactivo.joblib
notebooks/: 01_carga_preparacion_dataset.ipynb  01_data_preparation.ipynb  02_entrenamiento_modelos.ipynb  02_model_training.ipynb  03_model_inference.ipynb  03_prediccion_nuevos_ejemplos.ipynb  (+1 more)
reports/: agent_simulation_results.csv  (+13 more)
(+235 files in other folders)
